style.css
*, *::before, *::after {
  box-sizing: border-box;
}

* {
  padding: 0;
  margin: 0;
}

/* html {
  color-scheme: light;
} */

body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  line-height: 1.5;
  min-height: 100vh;
  padding: 10px;
  text-align: center;
  max-width: 500px;
  margin: 10px auto;
}

.logo-header {
  display: inline;
  background-color: wheat;
  border-radius: 0.3rem;
  padding: 3px 7px;
}

.logo-title-1 {
  color: #f7af31;
}

.logo-title-2 {
  color: #f15026;
}

.main-dishes-list {
  margin-top: 30px;
}

.main-dishes-list img {
  height: auto;
  max-width: 350px; 
  margin: 10px auto;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

ul li {
  list-style: none;
}

.recipe-image {
  margin: 0 auto;  
}

img {
  display: block;
}

